Kubernetes/03_spring_example/k8s/30-order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service-db
spec:
  ports:
    - port: 27017
  selector:
    app: order-service-db
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  ports:
  - port: 8080
  selector:
    app: order-service
