Kubernetes/03_spring_example/k8s/30-user-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service-db
spec:
  ports:
    - port: 27017
  selector:
    app: user-service-db
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  ports:
  - port: 8080
  selector:
    app: user-service
